recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:15: error: not found: value k
k=0
^SquareKoch:32: error: not found: value k
	motif(length,levels,k)
                            ^